tests/vertical-slice/accept/wire_json_enum_unit_roundtrip.hew
// Validation: a unit-variant `#[wire]` enum serializes to a bare JSON string
// naming the variant, and `from_json` parses that string back to the variant.
// The recovered variant selects the exit code (42 for `Pending`).
#[wire]
enum Status {
    Active;
    Inactive;
    Pending;
}

fn main() -> i64 {
    let s = Status::Pending;
    let j = s.to_json();
    if j != "\"Pending\"" { return 1; }
    match Status.from_json(j) {
        Ok(back) => match back {
            Status::Active => 2,
            Status::Inactive => 3,
            Status::Pending => 42,
        },
        Err(_) => 4,
    }
}
